fix newsletter on mobile view

--- a/public/webasset/css/style.css
+++ b/public/webasset/css/style.css
@@ -6718,10 +6718,10 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 }
 
 @media (max-width: 991px) {
-  .header-search-column,
+  /* .header-search-column,
   .header-menu-column {
     display: none;
-  }
+  } */
   /* sticky */
   .sticky-active {
     position: inherit;
